# feedmailer

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
feedmailer/: app.py  cmd.py  commandline.py  constants.py  crud.py  database.py  mailer.py  main.py  types.py
feedmailer/data/: article.html.jinja  article.txt.jinja  defaults.cfg  digest.html.jinja  digest.txt.jinja
src/: cmd.py  constants.py  database.py  main.py
